<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <ProgressBar
	        android:id="@+id/progressBar1"
	        style="?android:attr/progressBarStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:progress="10" />
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/loading"
	        android:paddingTop="15dp" />
	    <TextView
	        android:id="@+id/percentage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="15dp"
	        android:paddingLeft="5dp" />	    
   	</LinearLayout>

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
		<Button
	        android:id="@+id/button_download_stop"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_download_stop" />
		<Button
	        android:id="@+id/button_retry"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_retry" />
	</LinearLayout>
		
</LinearLayout>	