<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_default"
    android:orientation="vertical">

	<FrameLayout
	android:id="@+id/FrameLayout1"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

        <ImageView 
        android:contentDescription="@string/header"
        android:scaleType="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9d2d2b"
        android:src="@drawable/recipie_header" />

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
			
	        <ImageView
	            android:id="@+id/preview"
	            android:layout_width="wrap_content"
	            android:layout_height="70dp"
	            android:layout_marginTop="1dp"
	            android:layout_marginLeft="1dp"
	            android:paddingRight="2dp"
	            android:contentDescription="@string/product_preview"
	            android:src="@drawable/logo_gray" />
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical" >
	
	            <TextView
	                android:id="@+id/title"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:textSize="14dp"
	                android:textStyle="bold" />
	
	            <RatingBar
	                android:id="@+id/ratingBar1"
	                style="?android:attr/ratingBarStyleSmall"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:maxHeight="47dip"
	                android:minHeight="17dip"
	                android:rating="2" />
	            
	            <TextView
	                android:id="@+id/title_meta"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#FFFFFF"
	                android:textSize="14dp" />
	        </LinearLayout>
	    </LinearLayout>
    </FrameLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipie_ingredients" />

            <TextView
                android:id="@+id/introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:singleLine="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipie_preparation" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:singleLine="false" />

            <TextView
                android:id="@+id/comment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipie_comment"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:singleLine="false" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>